load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@rules_itest//:itest.bzl", "itest_service")
load(":bootstrap.bzl", "mysql_impl")

alias(
    name = "mysql_cli",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@mysql_8_0_34_macos13-arm64//:mysql_cli",
        "@bazel_tools//src/conditions:darwin_x86_64": "@mysql_8_0_34_macos13-x86_64//:mysql_cli",
        "@bazel_tools//src/conditions:linux_aarch64": "@mysql_8_0_34_linux-glibc2.28-aarch64//:mysql_cli",
        "@bazel_tools//src/conditions:linux_x86_64": "@mysql_8_0_34_linux-glibc2.28-x86_64//:mysql_cli",
    }),
)

alias(
    name = "mysqld",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@mysql_8_0_34_macos13-arm64//:mysqld",
        "@bazel_tools//src/conditions:darwin_x86_64": "@mysql_8_0_34_macos13-x86_64//:mysqld",
        "@bazel_tools//src/conditions:linux_aarch64": "@mysql_8_0_34_linux-glibc2.28-aarch64//:mysqld",
        "@bazel_tools//src/conditions:linux_x86_64": "@mysql_8_0_34_linux-glibc2.28-x86_64//:mysqld",
    }),
)

mysql_impl(
    name = "vanilla",
    mysqld = ":mysqld",
)

mysql_impl(
    name = "with_migrations",
    init_sql = "//mysql:init.sql",
    mysqld = ":mysqld",
)

# =================================================================================================== #
# ============================================ Socket version ======================================= #
# =================================================================================================== #
itest_service(
    name = "mysql_listening_on_socket",
    args = [
        "--skip_networking",
        "--socket",
        "$${SOCKET_DIR}/mysql.sock",
    ],
    exe = ":with_migrations",
    health_check = ":mysql_cli",
    health_check_args = [
        "--no-defaults",
        "--socket",
        "$${SOCKET_DIR}/mysql.sock",
        "--user",
        "user",
        "--password=password",
        "-e",
        "SELECT 1",
    ],
    visibility = ["//visibility:public"],
)

# =================================================================================================== #
# ============================================ Port version ======================================= #
# =================================================================================================== #
itest_service(
    name = "mysql_listening_on_port",
    args = [
        "--bind-address",
        "127.0.0.1",
        "--port",
        "$${PORT}",
    ],
    autoassign_port = True,
    exe = ":with_migrations",
    health_check = ":mysql_cli",
    health_check_args = [
        "--no-defaults",
        "--protocol",
        "tcp",
        "--host",
        "127.0.0.1",
        "--port",
        "$${PORT}",
        "--user",
        "root",
        "-e",
        "SELECT 1",
    ],
    visibility = ["//visibility:public"],
)
