load("@rules_itest//:itest.bzl", "itest_service")

itest_service(
    name = "redis",
    args = [
        "--port",
        "$${PORT}",
        "--dir",
        "$${TMPDIR}",
    ],
    autoassign_port = True,
    exe = "@com_github_redis_redis//:redis",
    health_check = "@com_github_redis_redis//:redis_cli",
    health_check_args = [
        "-h",
        "localhost",
        "-p",
        "$${PORT}",
        "PING",
    ],
    tags = [
        "requires-network",
    ],
)
