load("@rules_itest//:itest.bzl", "itest_service")

itest_service(
    name = "redis",
    args = [
        "--port",
        "0",
        "--unixsocket",
        "$${TMPDIR}/redis.sock",
        "--unixsocketperm",
        "770",
        "--dir",
        "$${TMPDIR}",
    ],
    exe = "@com_github_redis_redis//:redis",
    health_check = "@com_github_redis_redis//:redis_cli",
    health_check_args = [
        "-s",
        "$${TMPDIR}/redis.sock",
        "PING",
    ],
)

itest_service(
    name = "redis_network",
    args = [
        "--port",
        "$${PORT}",
        "--dir",
        "$${TMPDIR}",
    ],
    autoassign_port = True,
    exe = "@com_github_redis_redis//:redis",
    health_check = "@com_github_redis_redis//:redis_cli",
    health_check_args = [
        "-h",
        "localhost",
        "-p",
        "$${PORT}",
        "PING",
    ],
    tags = [
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)
