load("@rules_go//go:def.bzl", "go_test")
load("@rules_itest//:itest.bzl", "itest_service", "service_test")

itest_service(
    name = "service",
    exe = "//go_service",
    http_health_check_address = "http://localhost:$PORT",
)

go_test(
    name = "_auto_assign_port_test",
    srcs = ["auto_assign_port_test.go"],
    tags = ["manual"],
)

# These can all run in parallel!
[
    service_test(
        name = "auto_assign_port_test_%s" % i,
        services = [
            ":service",
        ],
        test = ":_auto_assign_port_test",
    )
    for i in range(10)
]
