load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_itest//:itest.bzl", "itest_service", "itest_task", "service_test")
load(":tests.bzl", "tests")

tests()

go_library(
    name = "deferred_lib",
    srcs = ["deferred_service.go"],
    importpath = "rules_itest/tests/deferred",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "deferred",
    embed = [":deferred_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "deferred_test",
    srcs = ["start_deferred_service_test.go"],
    embed = [":deferred_lib"],
    tags = ["manual"],
    deps = ["//svcctl"],
)

service_test(
    name = "deferred_service_test",
    services = [":deferred_itest_service"],
    test = ":deferred_test",
)

itest_service(
    name = "deferred_itest_service",
    args = [
        "$${PORT}",
    ],
    autoassign_port = True,
    deferred = True,
    exe = ":deferred",
    http_health_check_address = "http://localhost:$${PORT}/healthz",
    tags = ["requires-network"],
)

itest_service(
    name = "deferred_task",
    deferred = True,
    exe = "@rules_itest//:exit0",
    hygienic = False,
)

itest_service(
    name = "non_deferred_depends_on_deferred_should_fail",
    exe = "@rules_itest//:exit0",
    tags = ["manual"],
    deps = [
        ":deferred_task",
    ],
)
