load("@rules_go//go:def.bzl", "go_test")
load("@rules_itest//:itest.bzl", "service_test")

go_test(
    name = "_e2e_test",
    srcs = ["e2e_test.go"],
    tags = ["manual"],
)

service_test(
    name = "e2e_test",
    services = [
        "//:sleepy_service",
    ],
    test = ":_e2e_test",
)

service_test(
    name = "e2e_test_interactive",
    interactive = True,
    services = [
        "//:sleepy_service",
    ],
    tags = ["ibazel_notify_changes"],
    test = ":_e2e_test",
)
