load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("@rules_itest//:itest.bzl", "itest_service", "service_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//:must_fail.bzl", "must_fail")

bool_flag(
    name = "enforce_graceful_shutdown",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

js_binary(
    name = "server",
    entry_point = "main.mjs",
    tags = ["manual"],
)

itest_service(
    name = "service_timeout_error",
    args = ["$${PORT}"],
    autoassign_port = True,
    enforce_graceful_shutdown = ":enforce_graceful_shutdown",
    env = {
        "SHUTDOWN_WAIT_SECONDS": "1000",
    },
    exe = ":server",
    http_health_check_address = "http://localhost:$${PORT}",
    tags = ["manual"],
)

itest_service(
    name = "service_timeout_no_error",
    args = ["$${PORT}"],
    autoassign_port = True,
    env = {
        "SHUTDOWN_WAIT_SECONDS": "1000",
    },
    exe = ":server",
    http_health_check_address = "http://localhost:$${PORT}",
    tags = ["manual"],
)

itest_service(
    name = "service_graceful",
    args = ["$${PORT}"],
    autoassign_port = True,
    enforce_graceful_shutdown = ":enforce_graceful_shutdown",
    env = {
        "SHUTDOWN_WAIT_SECONDS": "1",
    },
    exe = ":server",
    http_health_check_address = "http://localhost:$${PORT}",
    shutdown_timeout = "10s",
    tags = ["manual"],
)

service_test(
    name = "graceful_shutdown_test",
    services = [
        ":service_graceful",
    ],
    test = "@rules_itest//:exit0_test",
)

service_test(
    name = "timeout_shutdown_test",
    services = [
        ":service_timeout_error",
    ],
    tags = ["manual"],
    test = "@rules_itest//:exit0_test",
)

service_test(
    name = "timeout_shutdown_no_error_test",
    services = [
        ":service_timeout_no_error",
    ],
    tags = ["manual"],
    test = "@rules_itest//:exit0_test",
)

must_fail(
    name = "shutdown_test_failure",
    test = "timeout_shutdown_test",
)

sh_test(
    name = "sigterm_before_sigkill_test",
    srcs = ["sigterm_before_sigkill_test.sh"],
    data = [":service_graceful"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
    tags = ["manual"],
)
